# UpHunter

./: .gitignore  README.md  dockerfile  export_csv.py  init_db.py  main.py  pyproject.toml  requirements.txt  sentry1.py  test_ai.py
.github/workflows/: deploy.yml
src/: config.py  database.py  models.py
src/api/: auth.py  main.py  routes.py
src/apps/: uphunter_dashboard.py
src/core/: ai_client.py  logger.py  vector_store.py
src/fetchers/: base.py  stealth_browser.py
src/jobs/: analyze_jobs_with_ai.py  scrape_upwork.py  sync_vectors.py
src/parsers/: base.py  upwork.py
src/storage/: postgres.py
