[project]
name = "uphunter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.122.0",
    "lancedb>=0.25.3",
    "numpy>=2.2.6",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "selenium>=4.38.0",
    "sentry-sdk>=2.46.0",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.51.0",
    "undetected-chromedriver>=3.5.5",
    "uvicorn>=0.38.0",
    "webdriver-manager>=4.0.2",
]
